--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PaintJS</title>
   </head>
   <body>
-    <canvas id="jsCanvas" class="canvas" width="700" height="700"></canvas>
+    <canvas id="jsCanvas" class="canvas" width="500" height="500"></canvas>
     <div class="controls">
       <div class="controls__range">
         <input
@@ -31,35 +31,35 @@
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: white ;"
+          style="background-color: white;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #FF3B30;"
+          style="background-color: #ff3b30;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #FF9500;"
+          style="background-color: #ff9500;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #FFCC00;"
+          style="background-color: #ffcc00;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #4CD963;"
+          style="background-color: #4cd963;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #5AC8FA;"
+          style="background-color: #5ac8fa;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #5079FF;"
+          style="background-color: #5079ff;"
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #5856D6;"
+          style="background-color: #5856d6;"
         ></div>
       </div>
     </div>
